--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <button type="button" class="call-back">Замовити дзвінок</button>
       </nav>
-      <h1 class="header1"><span>Сучасна</span> Пекарня</h1>
+      <h1 class="header"><span>Сучасна</span> Пекарня</h1>
     </header>
     <section id="advantages" class="section-advantages">
       <ul>
