--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
         </div>
         <button type="button" class="call-back">Замовити дзвінок</button>
       </nav>
-<<<<<<< HEAD
-      <h1 class="header"><span>Сучасна</span> Пекарня</h1>
-=======
-      <h1 class="header1"><span>Сучасна</span> Пекарня</h1>
->>>>>>> 0c99bf9a1376d330565d562cf0c5bc30321b45b2
+      <h1 class="header">
+        <span class="primary-color-text">Сучасна</span> Пекарня
+      </h1>
     </header>
     <section id="advantages" class="section-advantages">
       <ul>
@@ -39,13 +37,14 @@
       <article>
         <h2>Новий формат традицій</h2>
         <p>
-          <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
-          зберегла смак традиційної випічки та натуральність інгредієнтів.
+          <span class="primary-color-text caps">shop bakery</span> — це пекарня,
+          яка взяла все найкраще, і зберегла смак традиційної випічки та
+          натуральність інгредієнтів.
         </p>
         <p>
           Ми працюємо як найвідоміші мережі —
-          <span>5 хвилин і замовлення готове</span>. А ще у наших пекарень
-          стильний дизайн та висока якість обслуговування!
+          <span class="primary-color-text">5 хвилин і замовлення готове</span>.
+          А ще у наших пекарень стильний дизайн та висока якість обслуговування!
         </p>
       </article>
       <div class="tradition-photo">
