add footer image

--- a/index.html
+++ b/index.html
@@ -152,7 +152,11 @@
     </section>
     <footer>
       <div class="wrapper">
-        <div class="footer-logo"></div>
+        <div class="footer-logo">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <img src="./images/logo.svg" alt="logo" />
+          </a>
+        </div>
         <div class="footer-menu">
           <ul>
             <li><a href="#">Наші традицій</a></li>
@@ -165,8 +169,16 @@
           <a href="tel:+380960000007">+38(096)000 00 07</a>
           <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
           <p class="addres">Україна, м. Київ, вул. Січових Стрільців 54</p>
-          <a href="#"><img src="" alt="facebook" /></a>
-          <a href="#"><img src="" alt="instagram" /></a>
+          <a href="#">
+            <svg class="social-icon" width="32" height="32">
+              <use href="./images/sprite-svg.svg#icon-facebook"></use>
+            </svg>
+          </a>
+          <a href="#">
+            <svg class="social-icon" width="32" height="32">
+              <use href="./images/sprite-svg.svg#icon-instagram"></use>
+            </svg>
+          </a>
         </div>
         <div class="footer-copyright">
           <p>Політика конфіденційності</p>
