--- a/index.html
+++ b/index.html
@@ -115,57 +115,63 @@
         <h2 class="formats-heder centered">Формати</h2>
         <div class="slider">
           <div class="slider-items">
-            <svg class="arrow-right" width="16" height="16">
-              <use href="./images/sprite-svg.svg#icon-arrow"></use>
-            </svg>
-            <div class="slider-item">
-              <img
-                src="./images/warlus.png"
-                alt="Format Warlus photo"
-                class="slider-img"
-              />
-              <div class="slider-text">
-                <h4 lang="en">Warlus</h4>
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
-                <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти-різнороби
-                </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </div>
-            <div class="slider-item">
-              <img
-                src="./images/harseshoe.png"
-                alt="Format Horseshoe photo"
-                class="slider-img"
-              />
-              <div class="slider-text">
-                <h4 lang="en">Horseshoe</h4>
-                <p>Площа: до 25 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </div>
-            <div class="slider-item">
-              <img
-                src="./images/handlebar.png"
-                alt="Format Handlebar photo"
-                class="slider-img"
-              />
-              <div class="slider-text">
-                <h4 lang="en">Handlebar</h4>
-                <p>Площа: до 15 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </div>
-            <svg class="arrow-left" width="16" height="16">
-              <use href="./images/sprite-svg.svg#icon-arrow"></use>
-            </svg>
+            <button class="slider-button" type="button">
+              <svg class="arrow-right" width="16" height="16">
+                <use href="./images/sprite-svg.svg#icon-arrow"></use>
+              </svg>
+            </button>
+            <ul class="formats-list">
+              <li class="formats-item">
+                <img
+                  src="./images/warlus.png"
+                  alt="Format Warlus photo"
+                  class="slider-img"
+                />
+                <div class="slider-text">
+                  <h4 lang="en">Warlus</h4>
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </li>
+              <li class="formats-item">
+                <img
+                  src="./images/harseshoe.png"
+                  alt="Format Horseshoe photo"
+                  class="slider-img"
+                />
+                <div class="slider-text">
+                  <h4 lang="en">Horseshoe</h4>
+                  <p>Площа: до 25 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </li>
+              <li class="formats-item">
+                <img
+                  src="./images/handlebar.png"
+                  alt="Format Handlebar photo"
+                  class="slider-img"
+                />
+                <div class="slider-text">
+                  <h4 lang="en">Handlebar</h4>
+                  <p>Площа: до 15 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </li>
+            </ul>
+            <button class="slider-button" type="button">
+              <svg class="arrow-left" width="16" height="16">
+                <use href="./images/sprite-svg.svg#icon-arrow"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </div>
